1、引入字体图标 2、完善布局，添加其他内容显示 3、完成类型1方块的向右移动逻辑 4、完成判断消除行的逻辑 5、完成游戏结束逻辑的判断

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -11,3 +11,11 @@ ul, li {
   padding: 0;
   list-style: none;
 }
+
+.clearfix {
+  &.after {
+    content: "";
+    clear: both;
+    display: block;
+  }
+}
